# DaoLib

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  TODO.md  daoConfig.cmake  files.md  vcpkg.json
cli_tool/: COMMANDS.md  go.mod  main.go
cli_tool/atlas/: incgen.go  meta.go  pack.go
cli_tool/cmdRun/: atlas2inc.go  create-tray.go  create_page.go  create_project.go  createproject.go  gif2png.go  install.go  packatlas.go
cli_tool/util/: enum.go
code/: CMakeLists.txt
code/include/: animated_sprite.hpp  daolib.hpp  daoui.hpp
code/include/component/: AnimatedSprite.hpp  Image.hpp  animated_sprite.hpp  geometry.hpp  image.hpp  rectangle.hpp
code/include/component/button/: SimpleButton.hpp  SimpleTextButtonStyle.hpp  SimpleTextureButtonStyle.hpp  simple_button.hpp  simple_text_button_style.hpp  simple_texture_button_style.hpp
code/include/component/graph/: Circle.hpp  IGraph.hpp  MaxPolygon.hpp  MiniPolygon.hpp  Polygon.hpp  Rect.hpp  SolidCircle.hpp  SolidRect.hpp
code/include/component/input/: InputBox.hpp  InputBoxStyle.hpp  input_box.hpp  input_box_style.hpp
code/include/components/: Image.hpp  Polygon.hpp  Text.hpp  graphs.hpp
code/include/components/graphs/: Arc.hpp  Circle.hpp  Ellipse.hpp  IGraph.hpp  Line.hpp  Polygon.hpp  Rectangle.hpp  Ring.hpp  RoundedRectangle.hpp  Sector.hpp  Triangle.hpp
code/include/core/basic_drawing_elements/: atlas_region.hpp  atlas_texture.hpp  color_rgb.hpp  glyph_atlas.hpp  text.hpp
code/include/core/frame/: App.hpp  AppController.hpp  Context.hpp  FrameLimiter.hpp  Tray.hpp  Window.hpp  WindowController.hpp  app.hpp  app_controller.hpp  context.hpp  frameLimiter.hpp  frame_limiter.hpp  tray.hpp  vertex_batch_builder.hpp  window.hpp  window_command.hpp  window_controller.hpp  window_event.hpp
code/include/core/render/: AtlasTexture.hpp  BatchRenderer.hpp  IDrawable.hpp  Text.hpp  Texture.hpp  Triangle.hpp  atlas_texture.hpp  text.hpp  triangle.hpp  vertex_batch_builder.hpp
code/include/core/render/primitives/: AtlasRegion.hpp  ColorRGB.hpp  GlyphAtlas.hpp  Vertex.hpp  glyph_atlas.hpp
code/include/core/tool/: BoundingBox.hpp  Log.hpp  MappedRegion.hpp  Point.hpp  RingVector.hpp  TickTimer.hpp  better_stl.hpp  bounding_box.hpp  mapped_region.hpp  ring_vector.hpp  tick_timer.hpp  type.hpp
code/include/interface/: IButton.hpp  IButtonStyle.hpp  IGeneralPage.hpp  IPage.hpp  button_style.hpp  drawable.hpp  general_page.hpp  page.hpp
code/include/web/http/: Headers.hpp  HttpClient.hpp  HttpTypes.hpp  HttpsClient.hpp
code/src/: daolib.cpp  daoui.cpp  test.cpp
code/src/component/: Image.cpp  image.cpp
code/src/component/button/: SimpleButton.cpp  simple_button.cpp
code/src/core/basic_drawing_elements/: atlas_texture.cpp  glyph_atlas.hpp.cpp
code/src/core/frame/: App.cpp  AppController.cpp  Context.cpp  Window.cpp  WindowController.cpp  app.cpp  app_controller.cpp  context.cpp  vertex_batch_builder.cpp  window.cpp  window_command.cpp  window_controller.cpp
code/src/core/render/: AtlasTexture.cpp  BatchRenderer.cpp  Texture.cpp  atlas_texture.cpp  vertex_batch_builder.cpp
code/src/core/render/primitives/: GlyphAtlas.cpp  glyph_atlas.cpp  glyph_atlas.hpp.cpp
code/src/core/tool/: BoundingBox.cpp  MappedRegion.cpp  bounding_box.cpp  mapped_region.cpp
code/src/interface/: IGeneralPage.cpp  general_page.cpp
code/src/web/http/: Headers.cpp  HttpClient.cpp  HttpTypes.cpp  HttpsClient.cpp
docs/en/: README.en.md
docs/zh/: README.zh.md  code_style.md
en/html/: AnimatedSprite_8hpp.html  AnimatedSprite_8hpp.js  AnimatedSprite_8hpp__incl.map  AnimatedSprite_8hpp__incl.md5  AnimatedSprite_8hpp_source.html  AppController_8cpp.html  AppController_8cpp__incl.map  AppController_8cpp__incl.md5  AppController_8cpp_source.html  AppController_8hpp.html  AppController_8hpp.js  AppController_8hpp__dep__incl.map  AppController_8hpp__dep__incl.md5  AppController_8hpp__incl.map  AppController_8hpp_source.html  App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8cpp_source.html  App_8hpp.html  App_8hpp__dep__incl.map  App_8hpp__dep__incl.md5  App_8hpp__incl.md5  App_8hpp_source.html  Arc_8hpp.html  Arc_8hpp.js  Arc_8hpp__dep__incl.md5  Arc_8hpp__incl.map  Arc_8hpp__incl.md5  Arc_8hpp_source.html  AtlasRegion_8hpp.html  AtlasRegion_8hpp.js  AtlasRegion_8hpp__dep__incl.map  AtlasRegion_8hpp__dep__incl.md5  AtlasRegion_8hpp__incl.map  AtlasRegion_8hpp__incl.md5  AtlasRegion_8hpp_source.html  AtlasTexture_8cpp.html  AtlasTexture_8cpp__incl.map  AtlasTexture_8cpp_source.html  (+1466 more)
example/: CMakeLists.txt  main.cpp  vcpkg.json
example/assets/textures/config/: atlas_region.cpp
example/assets/textures/inc/: textures.inc
example/context/services/: service.cpp  service.hpp
example/context/states/: states.cpp  states.hpp
example/pages/hello_dao_page/: hello_dao_page.cpp  hello_dao_page.hpp
example/tray/: tray.cpp  tray.hpp
test/: CMakeLists.txt  main.cpp
test/assets/textures/config/: atlas_region.cpp
test/assets/textures/inc/: texture_datas.inc  texture_dates.inc
test/include/: pats.hpp  test_page.hpp  test_page_1.hpp
test/pages/: hello_dao_page.cpp  hello_dao_page.hpp
test/pages/page_a/: page_a.cpp  page_a.hpp
test/src/: main.cpp  test_page.cpp
test/tray/: AppTray.cpp  AppTray.hpp
tool/: atlas_packer.py  json-to-inc.py
tool/example/: atlas_meta.json
zh/html/: AnimatedSprite_8hpp.html  AnimatedSprite_8hpp__incl.map  AnimatedSprite_8hpp__incl.md5  AnimatedSprite_8hpp_source.html  AppController_8cpp.html  AppController_8cpp__incl.map  AppController_8cpp__incl.md5  AppController_8cpp_source.html  AppController_8hpp.html  AppController_8hpp__dep__incl.map  AppController_8hpp__dep__incl.md5  AppController_8hpp__incl.md5  AppController_8hpp_source.html  App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8cpp_source.html  App_8hpp.html  App_8hpp.js  App_8hpp__dep__incl.md5  App_8hpp__incl.map  App_8hpp__incl.md5  App_8hpp_source.html  Arc_8hpp.html  Arc_8hpp__dep__incl.map  Arc_8hpp_source.html  AtlasRegion_8hpp.html  AtlasRegion_8hpp__dep__incl.map  AtlasRegion_8hpp__dep__incl.md5  (+1469 more)
(+273 files in other folders)
